--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -65,10 +65,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ece097a-65d9-4763-88c3-3577e612ba5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -840,7 +854,8 @@
    "id": "8d14574f-e263-4dbd-8294-115c7fe42fb1",
    "metadata": {},
    "source": [
-    "#### 画像ファイルをダウンロードして保存"
+    "#### 画像ファイルをダウンロードして保存\n",
+    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -850,16 +865,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/image/pukiwiki.png'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "with open('img1.jpg', 'wb') as saveFile : saveFile.write(res.content)"
    ]
   },
