--- a/Notebook/Jupyter/path/NumPyTraining2.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining2.ipynb
@@ -50,6 +50,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed54b77-1d55-439f-ba29-db552f747a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b86d6663-b0e7-4273-93b4-7f806074432e",
    "metadata": {
