--- a/Notebook/Jupyter/path/PandasTraining.ipynb
+++ b/Notebook/Jupyter/path/PandasTraining.ipynb
@@ -63,8 +63,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1bae98-ea9e-457a-9280-72bf616df14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -437,7 +451,8 @@
    "id": "b75f572b-db02-423b-ae25-20326f1622d9",
    "metadata": {},
    "source": [
-    "##### CSVファイルをダウンロードして..."
+    "##### CSVファイルをダウンロードして...\n",
+    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -447,16 +462,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=temp.csv&refer=Pandas'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ"
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ"
    ]
   },
   {
@@ -533,7 +545,8 @@
    "id": "828ca091-16d8-4f74-9b9f-ca0223707df7",
    "metadata": {},
    "source": [
-    "##### Excelファイルをダウンロードして..."
+    "##### Excelファイルをダウンロードして...\n",
+    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -543,16 +556,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=temp.xlsx&refer=Pandas'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ"
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ"
    ]
   },
   {
