--- a/Notebook/Jupyter/path/PythonTraining.ipynb
+++ b/Notebook/Jupyter/path/PythonTraining.ipynb
@@ -14,6 +14,7 @@
     "  - [変数](#変数)\n",
     "  - [制御構文](#制御構文)\n",
     "  - [関数・クラス](#関数・クラス)\n",
+    "  - [その他](#その他)\n",
     "  \n",
     "## [目次](TableOfContents.ipynb)\n",
     "\n",
@@ -31,6 +32,27 @@
    },
    "source": [
     "## 概要"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d40a2fd5-f412-48f0-9fda-80ae7d1c33c6",
+   "metadata": {},
+   "source": [
+    "### 環境変数設定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aea2ffe3-3e10-4287-bad3-fcd36099cee3",
+   "metadata": {},
+   "source": [
+    "#### プロキシ設定\n",
+    "jupyter notebook、jupyter labコマンド実行前に、環境変数を設定しておくと良い。\n",
+    "```sh\n",
+    "export http_proxy=\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
+    "export https_proxy=\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
+    "```"
    ]
   },
   {
@@ -81,11 +103,7 @@
    "source": [
     "##### アップデート\n",
     "- 環境によっては、pythonではなくpython3と打つ必要あり。\n",
-    "- 必要に応じて、プロキシ設定を行う（起動前に環境変数を設定してもOK）。\n",
-    "```sh\n",
-    "export http_proxy=\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "export https_proxy=\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
-    "```"
+    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](プロキシ設定)。"
    ]
   },
   {
@@ -105,7 +123,7 @@
    "source": [
     "##### パッケージのインストール\n",
     "- 環境によっては、pipではなくpip3と打つ必要あり。\n",
-    "- 必要に応じて、プロキシ設定を行う。"
+    "- 必要に応じて、[プロキシ設定を行う（起動前に環境変数を設定してもOK）](プロキシ設定)。"
    ]
   },
   {
@@ -191,6 +209,25 @@
    "source": [
     "import numpy as np\n",
     "np.array([1.0,2.0,3.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63bff3de-da08-449d-bba9-7ba3eb56d7a3",
+   "metadata": {},
+   "source": [
+    "###### warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86141f34-4759-44b4-81d0-df1f7e21802e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -1281,7 +1318,9 @@
   {
    "cell_type": "markdown",
    "id": "3e5e3b0f-cbf1-4678-89f9-a0b31692d2bb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### 関数"
    ]
@@ -1456,7 +1495,9 @@
   {
    "cell_type": "markdown",
    "id": "29b74fe6-0a2e-439a-bb64-0bab8360d16a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### クラス\n",
     "```python\n",
@@ -1497,6 +1538,82 @@
    "source": [
     "# 実行例\n",
     "m = Man(\"hoge\")\n",
+    "m.hello()\n",
+    "m.goodbye()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d230f871-594b-433f-8377-b90f9beb9f94",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### その他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d879bf3-3f9d-4988-a352-09db55fd9c4d",
+   "metadata": {},
+   "source": [
+    "#### オブジェクトの保存と復元\n",
+    "pickleのシリアライズとデシリアライズで保存と復元"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37ff015a-de02-4dee-bce0-d8843f63199c",
+   "metadata": {},
+   "source": [
+    "##### pickleのシリアライズで保存"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da22b96-1a53-4521-b6e4-7ad6107018d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "m = Man(\"hoge\")\n",
+    "\n",
+    "print(\"\\n<保存される前>\")\n",
+    "m.hello()\n",
+    "m.goodbye()\n",
+    "\n",
+    "# 保存されるオブジェクト\n",
+    "obj = m\n",
+    "# シリアライズ相当\n",
+    "with open('hoge.pickle','wb') as f:\n",
+    "   pickle.dump(obj, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "314ae296-7a09-450e-8b9e-e9e63e60f744",
+   "metadata": {},
+   "source": [
+    "#### pickleのデシリアライズで復元"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1eebbcc-38ab-4a0b-b7f8-66eaf6dd7d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# デシリアライズ相当\n",
+    "with open('hoge.pickle','rb') as f:\n",
+    "   loaded_obj = pickle.load(f)\n",
+    "\n",
+    "# 復元されたオブジェクト\n",
+    "m = loaded_obj\n",
+    "\n",
+    "print(\"\\n<復元された後>\")\n",
     "m.hello()\n",
     "m.goodbye()"
    ]
