--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -78,6 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import mglearn\n",
@@ -107,8 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler            # 標準化\n",
-    "from sklearn.model_selection import train_test_split        # データ分割"
+    "from sklearn import datasets                                 # サンプル・データセット\n",
+    "from sklearn.datasets import make_regression                 # 回帰データセット作成\n",
+    "from sklearn.datasets import make_blobs                      # 分類データセット作成\n",
+    "from sklearn.preprocessing import StandardScaler             # 標準化\n",
+    "from sklearn.model_selection import train_test_split         # データ分割"
    ]
   },
   {
@@ -126,22 +132,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression           # 線形回帰\n",
-    "from sklearn.preprocessing import PolynomialFeatures        # 多項式回帰の変数変換\n",
-    "from sklearn.linear_model import Ridge                      # 多項式回帰のRidge回帰\n",
-    "from sklearn.linear_model import Lasso                      # 多項式回帰のLASSO回帰\n",
-    "from sklearn.linear_model import ElasticNet                 # 多項式回帰のLASSO回帰\n",
-    "from sklearn.linear_model import Perceptron                 # 単純パーセプトロン線形分類器\n",
-    "from sklearn.linear_model import LogisticRegression         # ロジスティク回帰\n",
-    "from sklearn.svm import SVC                                 # サポートベクターマシン（SVM）分類器\n",
-    "from sklearn.tree import DecisionTreeClassifier             # 決定木（分類木）\n",
-    "from sklearn.ensemble import RandomForestClassifier         # ランダムフォレスト（分類木）\n",
-    "from sklearn.ensemble import GradientBoostingClassifier     # 勾配ブースティング木（分類木）\n",
-    "from sklearn.decomposition import PCA                       # 主成分分析\n",
-    "from sklearn.cluster import KMeans                          # k-means法 クラスタ分析\n",
-    "from sklearn.feature_extraction.text import CountVectorizer # 自然言語処理ベクトル化\n",
+    "from sklearn.linear_model import LinearRegression            # 線形回帰\n",
+    "from sklearn.preprocessing import PolynomialFeatures         # 多項式回帰の変数変換\n",
+    "from sklearn.linear_model import Ridge                       # 多項式回帰のRidge回帰\n",
+    "from sklearn.linear_model import Lasso                       # 多項式回帰のLASSO回帰\n",
+    "from sklearn.linear_model import ElasticNet                  # 多項式回帰のLASSO回帰\n",
+    "from sklearn.linear_model import Perceptron                  # 単純パーセプトロン線形分類器\n",
+    "from sklearn.linear_model import LogisticRegression          # ロジスティク回帰\n",
+    "from sklearn.svm import SVC                                  # サポートベクターマシン（SVM）分類器\n",
+    "from sklearn.tree import DecisionTreeClassifier              # 決定木（分類木）\n",
+    "from sklearn.ensemble import RandomForestClassifier          # ランダムフォレスト（分類木）\n",
+    "from sklearn.ensemble import GradientBoostingClassifier      # 勾配ブースティング木（分類木）\n",
+    "from sklearn.decomposition import PCA                        # 主成分分析\n",
+    "from sklearn.cluster import KMeans                           # k-means法 クラスタ分析\n",
+    "from sklearn.feature_extraction.text import CountVectorizer  # 自然言語処理ベクトル化\n",
     "from sklearn.feature_extraction.text import TfidfTransformer # 自然言語ベクトルのTF-IDF計算\n",
-    "from sklearn.decomposition import LatentDirichletAllocation # 自然言語ベクトルからLDAトピック抽出"
+    "from sklearn.decomposition import LatentDirichletAllocation  # 自然言語ベクトルからLDAトピック抽出"
    ]
   },
   {
@@ -159,32 +165,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import metrics                                 # モデル評価\n",
-    "from sklearn.metrics import mean_squared_error as mse       # 精度評価（mse）\n",
-    "from sklearn.metrics import silhouette_samples              # シルエット係数\n",
-    "from sklearn.model_selection import cross_val_score         # 交差検証法\n",
-    "from sklearn.model_selection import KFold                   # k分割交差検証法\n",
-    "from sklearn.model_selection import StratifiedKFold         # 層化交差検証法\n",
-    "from sklearn.model_selection import GridSearchCV            # グリッドサーチ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "055bcd4f-71d0-473f-be93-4a400193e22f",
-   "metadata": {},
-   "source": [
-    "##### データセット生成"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "152d78e1-607f-411f-a251-b29c80e21dcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import make_regression                # 回帰データセット\n",
-    "from sklearn.datasets import make_blobs                     # 分類データセット"
+    "from sklearn import metrics                                  # モデル評価\n",
+    "from sklearn.metrics import mean_squared_error as mse        # 精度評価（mse）\n",
+    "from sklearn.metrics import confusion_matrix                 # 混同行列\n",
+    "from sklearn.metrics import silhouette_samples               # シルエット係数\n",
+    "from sklearn.model_selection import cross_val_score          # 交差検証法\n",
+    "from sklearn.model_selection import KFold                    # k分割交差検証法\n",
+    "from sklearn.model_selection import StratifiedKFold          # 層化交差検証法\n",
+    "from sklearn.model_selection import GridSearchCV             # グリッドサーチ"
    ]
   },
   {
@@ -231,6 +219,17 @@
    "outputs": [],
    "source": [
     "from numpy import linalg as LA # 線形代数ライブラリ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5996b7d2-9c99-413d-9d90-b14281dab187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -500,7 +499,8 @@
    "id": "c3b55341-5bde-4bdd-8a8a-527f21bf5a5d",
    "metadata": {},
    "source": [
-    "#### 以下の手順で使用するデータのロード（Webから"
+    "#### 以下の手順で使用するデータのロード（Webから\n",
+    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -510,16 +510,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='shift-jis', sep=\";\")\n",
     "df"
    ]
@@ -770,19 +767,22 @@
    "id": "862ee70b-1b67-4e0c-85b4-56b672ef1772",
    "metadata": {},
    "source": [
-    "#### [データの構築](PandasTraining.ipynb)\n",
-    "単一属性変換\n",
-    "- カテゴリ → 数値\n",
-    "- 数値 → カテゴリ"
+    "#### [データの構築・統合](PandasTraining.ipynb)\n",
+    "- 単一属性変換\n",
+    "  - カテゴリ → 数値\n",
+    "  - 数値 → カテゴリ\n",
+    "- One-Hotエンコーディング\n",
+    "  - [NumPyの場合、to_categoricalを使う。](NumPyTraining3.ipynb)\n",
+    "  - [Pandasの場合、get_dummiesを使う。](PandasTraining.ipynb)（基本コッチ"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10e0ce0f-4039-496f-818b-b86fc4f25438",
+   "id": "ebca582a-4722-4638-b27c-171898126aa1",
    "metadata": {},
    "source": [
-    "#### [データの統合](PandasTraining.ipynb)\n",
-    "One-Hotエンコーディング"
+    "#### （PG上ある）\n",
+    "CRIPS-DM上には明記されていないが、PG的に必要。"
    ]
   },
   {
@@ -792,8 +792,15 @@
     "tags": []
    },
    "source": [
-    "#### 説明変数と目的変数の切出\n",
-    "取り敢えず以下のサンプルを使う。"
+    "##### 説明変数と目的変数の切出"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da63977a-995b-4d5e-bb97-dcfe242b6ed8",
+   "metadata": {},
+   "source": [
+    "##### 取り敢えず以下のサンプルを使う。"
    ]
   },
   {
@@ -803,8 +810,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array(df.loc[:, ['density']])\n",
-    "y = np.array(df.loc[:, ['alcohol']])"
+    "x = np.array(df2.loc[:, ['alcohol']])\n",
+    "y = np.array(df2.loc[:, ['quality']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98eadfc6-bc4e-46a7-ae18-733865c7ff0c",
+   "metadata": {},
+   "source": [
+    "###### DFでやるか"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07fed752-5d16-4700-8fa0-3b0d2aa22c2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_x = df2.loc[:, ['alcohol']]\n",
+    "df_y = df2.loc[:, ['quality']]\n",
+    "x1 = np.array(df_x)\n",
+    "y1 = np.array(df_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62c0d184-773e-48f6-834c-8ffc96d4e355",
+   "metadata": {},
+   "source": [
+    "###### NPでやるか"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b07e9e3a-ece1-4235-a1b6-a3064af58ac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy = np.array(df2)\n",
+    "xy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4aedaf5-dc7c-4054-8299-3d930780c805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x2 = xy[:, 3:4]\n",
+    "y2 = xy[:, 4:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92d9e6c2-3310-4fa3-b9b7-ca293f5c145b",
+   "metadata": {},
+   "source": [
+    "###### 比較してチェック"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ee774c-f1a0-4fa1-bf2e-34aad89a1261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.allclose(x1, x2))\n",
+    "print(np.allclose(y1, y2))"
    ]
   },
   {
@@ -814,7 +891,9 @@
     "tags": []
    },
    "source": [
-    "#### データの標準化"
+    "##### 標準化・正規化\n",
+    "DFでやる方法とNPでやる方法があるが、\n",
+    "[説明変数と目的変数の切出](#説明変数と目的変数の切出)基本NPでやる。"
    ]
   },
   {
@@ -824,8 +903,7 @@
     "tags": []
    },
    "source": [
-    "##### 標準化\n",
-    "x, y 共に標準化。"
+    "###### 標準化"
    ]
   },
   {
@@ -837,8 +915,7 @@
    "source": [
     "ss = StandardScaler()\n",
     "# 引数は numpy.ndarray\n",
-    "x = ss.fit_transform(x)\n",
-    "y = ss.fit_transform(y)"
+    "x = ss.fit_transform(x)"
    ]
   },
   {
@@ -846,7 +923,7 @@
    "id": "46711336-636d-4949-b869-e503482247b5",
    "metadata": {},
    "source": [
-    "##### 確認"
+    "###### 標準化の確認"
    ]
   },
   {
@@ -857,8 +934,7 @@
    "outputs": [],
    "source": [
     "# 平均が ≒ 0\n",
-    "print(x.mean())\n",
-    "print(y.mean())"
+    "print(x.mean())"
    ]
   },
   {
@@ -869,8 +945,25 @@
    "outputs": [],
    "source": [
     "# 標準偏差が ≒ 1\n",
-    "print(x.std())\n",
-    "print(y.std())"
+    "print(x.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae154764-c2a6-4900-8d36-59463f7f514b",
+   "metadata": {},
+   "source": [
+    "###### 正規化\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf15da19-0e6e-4db9-b1c6-e59772b29031",
+   "metadata": {},
+   "source": [
+    "###### 正規化の確認\n",
+    "..."
    ]
   },
   {
@@ -880,15 +973,18 @@
     "tags": []
    },
    "source": [
-    "#### 学習・テストデータの分割"
+    "##### 学習・テストデータの分割"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "191485d0-f80a-4fe1-9974-49e77e738a36",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "##### ホールド・アウト法\n",
+    "###### ホールド・アウト法\n",
     "- test_size = 0.3  \n",
     "train:test = 7:3 で分割。\n",
     "- random_state = 0  \n",
@@ -898,34 +994,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd01af80-7eff-4434-b8f3-e0d466a7196e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 学習・テストデータの分割（ホールド・アウト法\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21935dc0-63a1-497c-b08e-c1efa43d6ada",
-   "metadata": {},
-   "source": [
-    "##### データ分割の結果確認\n",
-    "(numpy.ndarray).shapeメソッドで確認できる。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "edab41cb-ad19-4f3c-8570-f61fddc6be85",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 学習・テストデータの分割（ホールド・アウト法\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 0)\n",
+    "\n",
+    "# データ分割の結果確認\n",
+    "# (numpy.ndarray).shapeメソッドで確認できる。\n",
     "print(x_train.shape)\n",
     "print(y_train.shape)\n",
     "print(x_test.shape)\n",
     "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26083dff-b2d3-4999-b6ca-963409b4b331",
+   "metadata": {},
+   "source": [
+    "###### [交差検証法](ScikitLearnTraining5.ipynb)"
    ]
   }
  ],
