--- a/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
@@ -36,11 +36,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn import datasets                                 # サンプル・データセット\n",
+    "from sklearn.datasets import make_regression                 # 回帰データセット作成\n",
+    "from sklearn.datasets import make_blobs                      # 分類データセット作成\n",
     "from sklearn.preprocessing import StandardScaler             # 標準化\n",
     "from sklearn.model_selection import train_test_split         # データ分割\n",
     "\n",
@@ -63,20 +69,29 @@
     "\n",
     "from sklearn import metrics                                  # モデル評価\n",
     "from sklearn.metrics import mean_squared_error as mse        # 精度評価（mse）\n",
+    "from sklearn.metrics import confusion_matrix                 # 混同行列\n",
     "from sklearn.metrics import silhouette_samples               # シルエット係数\n",
     "from sklearn.model_selection import cross_val_score          # 交差検証法\n",
     "from sklearn.model_selection import KFold                    # k分割交差検証法\n",
     "from sklearn.model_selection import StratifiedKFold          # 層化交差検証法\n",
     "from sklearn.model_selection import GridSearchCV             # グリッドサーチ\n",
     "\n",
-    "from sklearn.datasets import make_regression                 # 回帰データセット\n",
-    "from sklearn.datasets import make_blobs                      # 分類データセット\n",
-    "\n",
     "import seaborn as sns                                        # matplotlibラッパ\n",
     "from mlxtend.plotting import plot_decision_regions           # 決定領域表示関数\n",
     "from matplotlib import cm                                    # カラーマップ処理\n",
     "\n",
     "from numpy import linalg as LA                               # 線形代数ライブラリ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07adbe0b-1034-4d0f-b8e4-9c162424c151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -113,7 +128,8 @@
    "metadata": {},
    "source": [
     "##### 生成\n",
-    "その日の最高気温と売れたアイスコーヒーの個数のデータを利用。"
+    "- その日の最高気温と売れたアイスの個数のデータを利用。\n",
+    "- 必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -123,16 +139,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=n_ice%2Bvs%2Btemp.xlsx&refer=FrontPage'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_excel(io.BytesIO(res.content))\n",
     "df"
    ]
@@ -385,7 +398,8 @@
    "id": "31a44888-68f1-412e-a88d-b761c215bfda",
    "metadata": {},
    "source": [
-    "###### 決定係数（R2乗値）"
+    "###### 決定係数（R2乗値）\n",
+    "絶対的な基準でないが0.5以上であれば適合度が高い"
    ]
   },
   {
@@ -450,7 +464,8 @@
     "tags": []
    },
    "source": [
-    "##### 生成"
+    "##### 生成\n",
+    "必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -478,18 +493,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=Boston.csv&refer=FrontPage'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a14e2d7-dd62-4dfb-815e-35d93975d655",
+   "metadata": {},
+   "source": [
+    "###### [説明を参照](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20DataSet#j8cfe8df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f43895e5-9244-421d-8aac-c7122090c4c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -765,7 +795,8 @@
    "id": "6d071fed-2634-4161-9158-62e1ab205f6b",
    "metadata": {},
    "source": [
-    "###### 決定係数（R2乗値）"
+    "###### 決定係数（R2乗値）\n",
+    "絶対的な基準でないが0.5以上であれば適合度が高い"
    ]
   },
   {
@@ -808,18 +839,25 @@
    "id": "5ef8c175-561e-46be-a2bf-690d7be5d179",
    "metadata": {},
    "source": [
-    "###### RMSEなどを計算する。"
+    "###### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
+    "- 平均二乗誤差（MSE：Mean Squared Error）\n",
+    "- 誤差の標準偏差（RMSE : Root Mean Squared Error）"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fdfd860-4b72-447c-bbc9-1bda3b67de9b",
+   "id": "08d96143-dad3-429a-9d51-074a46a94ac9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('train: %.3f' % (mse(y_train, lr.predict(x_train)) ** (1/2)))\n",
-    "print('test : %.3f' % (mse(y_test, lr.predict(x_test)) ** (1/2)))"
+    "train_mse = mse(y_train, lr.predict(x_train))\n",
+    "test_mse = mse(y_test, lr.predict(x_test))\n",
+    "\n",
+    "print('train_mse: %.3f' % train_mse)\n",
+    "print('test_mse: %.3f' % test_mse)\n",
+    "print('train_rmse: %.3f' % (train_mse ** (1/2)))\n",
+    "print('test_rmse : %.3f' % (test_mse ** (1/2)))"
    ]
   },
   {
@@ -834,30 +872,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c4f834-564f-46dd-9a20-c147eb88f271",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y = w0 + w1*x1 + w2*x2\n",
-    "w0 = lr.intercept_\n",
-    "w1 = lr.coef_[0, 0]\n",
-    "w2 = lr.coef_[0, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "57c51cd1-9dfc-4000-922f-557e48d13568",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 可視化\n",
+    "\n",
     "# import\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "# 2次元のグリッド座標\n",
+    "# 平面のグリッド座標\n",
+    "w0 = lr.intercept_\n",
+    "w1 = lr.coef_[0, 0]\n",
+    "w2 = lr.coef_[0, 1]\n",
     "x, y = np.meshgrid(np.arange(0, 40, 2.5), np.arange(1, 10, 0.5))\n",
-    "\n",
-    "# 平面の式\n",
     "z = w1*x + w2*y + w0 \n",
     "\n",
     "# 図表の定義\n",
