--- a/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
@@ -34,11 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn import datasets                                 # サンプル・データセット\n",
+    "from sklearn.datasets import make_regression                 # 回帰データセット作成\n",
+    "from sklearn.datasets import make_blobs                      # 分類データセット作成\n",
     "from sklearn.preprocessing import StandardScaler             # 標準化\n",
     "from sklearn.model_selection import train_test_split         # データ分割\n",
     "\n",
@@ -61,20 +67,29 @@
     "\n",
     "from sklearn import metrics                                  # モデル評価\n",
     "from sklearn.metrics import mean_squared_error as mse        # 精度評価（mse）\n",
+    "from sklearn.metrics import confusion_matrix                 # 混同行列\n",
     "from sklearn.metrics import silhouette_samples               # シルエット係数\n",
     "from sklearn.model_selection import cross_val_score          # 交差検証法\n",
     "from sklearn.model_selection import KFold                    # k分割交差検証法\n",
     "from sklearn.model_selection import StratifiedKFold          # 層化交差検証法\n",
     "from sklearn.model_selection import GridSearchCV             # グリッドサーチ\n",
     "\n",
-    "from sklearn.datasets import make_regression                 # 回帰データセット\n",
-    "from sklearn.datasets import make_blobs                      # 分類データセット\n",
-    "\n",
     "import seaborn as sns                                        # matplotlibラッパ\n",
     "from mlxtend.plotting import plot_decision_regions           # 決定領域表示関数\n",
     "from matplotlib import cm                                    # カラーマップ処理\n",
     "\n",
     "from numpy import linalg as LA                               # 線形代数ライブラリ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49a1d23b-e358-458b-a90a-0dd2955d5472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -112,7 +127,8 @@
    "metadata": {},
    "source": [
     "##### 生成・加工・理解\n",
-    "重回帰の問題の解消のためなので、[重回帰](ScikitLearnTraining1.ipynb)と同じデータの生成・加工・理解を行う。"
+    "- 重回帰の問題の解消のためなので、[重回帰](ScikitLearnTraining1.ipynb)と同じデータの生成・加工・理解を行う。\n",
+    "- 必要に応じて[環境変数にプロキシ設定](PythonTraining.ipynb)をしておくと良い。"
    ]
   },
   {
@@ -122,16 +138,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import requests\n",
-    "\n",
     "proxies = { # プロキシ設定\n",
     "\"http\":\"http://<user_name>:<password>@<proxy_host>:<proxy_port>/\",\n",
     "\"https\":\"https://<user_name>:<password>@<proxy_host>:<proxy_port>/\"\n",
     "}\n",
     "\n",
     "url = 'https://raw.githubusercontent.com/vincentarelbundock/Rdatasets/master/csv/MASS/Boston.csv'\n",
-    "res = requests.get(url) # , proxies=proxies, verify=False) # プロキシ\n",
+    "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='utf-8', sep=\",\")\n",
     "df = df.drop('Unnamed: 0',axis=1)\n",
     "df = df.loc[:, ['lstat', 'indus', 'dis', 'rm', 'medv']]\n",
