--- a/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
@@ -38,11 +38,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn import datasets                                 # サンプル・データセット\n",
+    "from sklearn.datasets import make_regression                 # 回帰データセット作成\n",
+    "from sklearn.datasets import make_blobs                      # 分類データセット作成\n",
     "from sklearn.preprocessing import StandardScaler             # 標準化\n",
     "from sklearn.model_selection import train_test_split         # データ分割\n",
     "\n",
@@ -65,20 +71,29 @@
     "\n",
     "from sklearn import metrics                                  # モデル評価\n",
     "from sklearn.metrics import mean_squared_error as mse        # 精度評価（mse）\n",
+    "from sklearn.metrics import confusion_matrix                 # 混同行列\n",
     "from sklearn.metrics import silhouette_samples               # シルエット係数\n",
     "from sklearn.model_selection import cross_val_score          # 交差検証法\n",
     "from sklearn.model_selection import KFold                    # k分割交差検証法\n",
     "from sklearn.model_selection import StratifiedKFold          # 層化交差検証法\n",
     "from sklearn.model_selection import GridSearchCV             # グリッドサーチ\n",
     "\n",
-    "from sklearn.datasets import make_regression                 # 回帰データセット\n",
-    "from sklearn.datasets import make_blobs                      # 分類データセット\n",
-    "\n",
     "import seaborn as sns                                        # matplotlibラッパ\n",
     "from mlxtend.plotting import plot_decision_regions           # 決定領域表示関数\n",
     "from matplotlib import cm                                    # カラーマップ処理\n",
     "\n",
     "from numpy import linalg as LA                               # 線形代数ライブラリ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e47816-87ae-4a8d-b616-d5f7a6507cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -106,7 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
     "iris = datasets.load_iris()\n",
     "df_data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
     "df_target = pd.DataFrame(iris.target, columns=['species'])\n",
@@ -693,16 +707,34 @@
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
-    "X_xor = np.random.randn(200, 2)\n",
-    "y_xor = np.logical_xor(X_xor[:, 0] > 0, X_xor[:, 1] > 0)\n",
+    "x_xor = np.random.randn(200, 2)\n",
+    "y_xor = np.logical_xor(x_xor[:, 0] > 0, x_xor[:, 1] > 0)\n",
     "y_xor = np.where(y_xor, 1, -1)\n",
     "# データの散布\n",
-    "plt.scatter(X_xor[y_xor == 1, 0], X_xor[y_xor == 1, 1], c='b', marker='x', label='1')\n",
-    "plt.scatter(X_xor[y_xor == -1, 0], X_xor[y_xor == -1, 1], c='r', marker='s', label='-1')\n",
+    "plt.scatter(x_xor[y_xor == 1, 0], x_xor[y_xor == 1, 1], c='b', marker='x', label='1')\n",
+    "plt.scatter(x_xor[y_xor == -1, 0], x_xor[y_xor == -1, 1], c='r', marker='s', label='-1')\n",
     "plt.xlim([-3, 3])\n",
     "plt.ylim([-3, 3])\n",
     "plt.legend(loc='best') # 右上に凡例を出力\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41b1bb59-5d6b-4b52-840e-34481fee418d",
+   "metadata": {},
+   "source": [
+    "###### ホールド・アウト法による学習・テストデータの分割"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19937d93-b739-4e87-9e46-99a66faa36e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_xor_train, x_xor_test, y_xor_train, y_xor_test = train_test_split(x_xor, y_xor, test_size=0.3, random_state=0)"
    ]
   },
   {
@@ -721,11 +753,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ホールド・アウト法による学習・テストデータの分割\n",
-    "X_xor_train, X_xor_test, y_xor_train, y_xor_test = train_test_split(X_xor, y_xor, test_size=0.3, random_state=0)\n",
-    "\n",
-    "rbf_svm = SVC(kernel='rbf', gamma=0.1, C=10)\n",
-    "rbf_svm.fit(X_xor_train, y_xor_train)"
+    "svc3 = SVC(kernel='rbf', gamma=0.1, C=10)\n",
+    "svc3.fit(x_xor_train, y_xor_train)"
    ]
   },
   {
@@ -743,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_decision_regions(X_xor, y_xor, rbf_svm)"
+    "plot_decision_regions(x_xor, y_xor, svc3)"
    ]
   },
   {
