--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -186,7 +186,10 @@
    "id": "044f12d9-9e9c-4719-a0d4-524e15fc586c",
    "metadata": {},
    "source": [
-    "#### [チューニング、パフォーマンス向上](ScikitLearnTraining5.ipynb)"
+    "#### [性能の評価、チューニング 編](ScikitLearnTraining5.ipynb)\n",
+    "- 分類問題の性能の評価\n",
+    "- 汎化性能の評価\n",
+    "- チューニング"
    ]
   },
   {
@@ -272,6 +275,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a01668b8-12d4-42de-8111-eed3b2c07da0",
+   "metadata": {},
+   "source": [
+    "##### CNNの..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6da3d9a8-239a-4a8e-8640-7635c877cb06",
    "metadata": {},
    "source": [
@@ -280,10 +291,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c232f747-c82b-47ff-8c89-62994532e11d",
+   "metadata": {},
+   "source": [
+    "#### [環境準備、共通処理](TensorFlowAndKeras0.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2e92301a-6c71-416b-83be-c1cc57b2e055",
    "metadata": {},
    "source": [
-    "#### CNN"
+    "#### [DNN](TensorFlowAndKeras1.ipynb)"
    ]
   },
   {
@@ -291,7 +310,15 @@
    "id": "65d3938a-6d3b-4719-a111-4e4c469aabea",
    "metadata": {},
    "source": [
-    "#### RNN"
+    "#### [RNN](TensorFlowAndKeras2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "039bdbee-4651-483c-bf30-9a0ea0cbfcdd",
+   "metadata": {},
+   "source": [
+    "#### [CNN](TensorFlowAndKeras3.ipynb)"
    ]
   },
   {
