--- a/Notebook/Jupyter/path/NumPyTraining1.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining1.ipynb
@@ -86,6 +86,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "5f0309ea-aea5-496f-8e60-66a0c818a579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "80823424-b81e-4e24-9dc6-4d8e80743f8c",
    "metadata": {
