--- a/Notebook/Jupyter/path/NumPyTraining3.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining3.ipynb
@@ -63,6 +63,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b1cb58-9c0c-4574-8932-28e6973fd689",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "31f07f16-cd3d-4b3d-8c55-7e7892231ffe",
    "metadata": {},
