--- a/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
@@ -34,11 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import mglearn\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn import datasets                                 # サンプル・データセット\n",
+    "from sklearn.datasets import make_regression                 # 回帰データセット作成\n",
+    "from sklearn.datasets import make_blobs                      # 分類データセット作成\n",
     "from sklearn.preprocessing import StandardScaler             # 標準化\n",
     "from sklearn.model_selection import train_test_split         # データ分割\n",
     "\n",
@@ -61,20 +67,29 @@
     "\n",
     "from sklearn import metrics                                  # モデル評価\n",
     "from sklearn.metrics import mean_squared_error as mse        # 精度評価（mse）\n",
+    "from sklearn.metrics import confusion_matrix                 # 混同行列\n",
     "from sklearn.metrics import silhouette_samples               # シルエット係数\n",
     "from sklearn.model_selection import cross_val_score          # 交差検証法\n",
     "from sklearn.model_selection import KFold                    # k分割交差検証法\n",
     "from sklearn.model_selection import StratifiedKFold          # 層化交差検証法\n",
     "from sklearn.model_selection import GridSearchCV             # グリッドサーチ\n",
     "\n",
-    "from sklearn.datasets import make_regression                 # 回帰データセット\n",
-    "from sklearn.datasets import make_blobs                      # 分類データセット\n",
-    "\n",
     "import seaborn as sns                                        # matplotlibラッパ\n",
     "from mlxtend.plotting import plot_decision_regions           # 決定領域表示関数\n",
     "from matplotlib import cm                                    # カラーマップ処理\n",
     "\n",
     "from numpy import linalg as LA                               # 線形代数ライブラリ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d5d2334-e423-43ec-b134-dac24c393cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -100,7 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
     "iris = datasets.load_iris()\n",
     "df_data = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
     "df_target = pd.DataFrame(iris.target, columns=['species'])\n",
